--- a/test2/index.html
+++ b/test2/index.html
@@ -6,7 +6,7 @@
   
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="http://allfont.ru/allfont.css?fonts=pt-sans-narrow" rel="stylesheet" type="text/css" />
     <link href="http://allfont.ru/allfont.css?fonts=roboto-black" rel="stylesheet" type="text/css" />
     <link href="http://allfont.ru/allfont.css?fonts=roboto-bold" rel="stylesheet" type="text/css" />
