add danteez2 create2

--- a/denteez2/index.html
+++ b/denteez2/index.html
@@ -6,7 +6,7 @@
   
     <link rel="stylesheet" href="styles/fonts.min.css">
     <link rel="stylesheet" href="styles/normalize.min.css">
-    <link rel="stylesheet" href="styles/styles.min.css" >
+    <link rel="stylesheet" href="styles/styles.css" >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="js/dest/script.min.js"></script>
     
