--- a/Radacode/index.html
+++ b/Radacode/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
   <title>Radacode</title>
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://allfont.ru/allfont.css?fonts=open-sans" rel="stylesheet" type="text/css" />
      <link href="http://allfont.ru/allfont.css?fonts=open-sans-light" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="styles/normalize.css">
