--- a/Radacode/index.html
+++ b/Radacode/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
   <title>Radacode</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://allfont.ru/allfont.css?fonts=open-sans" rel="stylesheet" type="text/css" />
      <link href="http://allfont.ru/allfont.css?fonts=open-sans-light" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="styles/normalize.css">
@@ -23,7 +23,7 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script
 <header>
     <nav>
         <div class="logo__wrap">
-            <a href="index.html" class="logo__link"></a>
+            <a href="index.html" class="logo__link"><img src="img/logo1.png" alt=""></a>
         </div>
         <div class="menu">
             <ul class="menu__list">
@@ -34,16 +34,22 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script
         </div>
     </nav>
     <div class="banner">
-        <div class="banner__logo-wrap">
-            <a href="#" class="banner__logo-link"></a>
+        <div class="banner__logo-wrap clear">
+            <a href="#" class="banner__logo-link"><img src="img/logo2.png" alt=""></a>
         </div>
-        <div class="cat">
-            <div class="cat1 ct"></div>
-            <div class="cat2 ct"></div>
-            <div class="cat3 ct"></div>
-            <div class="cat4 ct"></div>
-            <div class="cat5 ct"></div>
-            <div class="cat6 ct"></div>
+        <div class="cat clear">
+            <div class="cat1 ct"><img src="img/ct1.png"
+             alt=""></div>
+            <div class="cat2 ct"><img src="img/ct2.png"
+             alt=""></div>
+            <div class="cat3 ct"><img src="img/ct3.png"
+             alt=""></div>
+            <div class="cat4 ct"><img src="img/ct4.png"
+             alt=""></div>
+            <div class="cat5 ct"><img src="img/ct5.png"
+             alt=""></div>
+            <div class="cat6 ct"><img src="img/ct6.png"
+             alt=""></div>
         </div>
         <div class="block__text">
             <span class="h1">An app that keeps your eyers healthy.</span>
@@ -68,7 +74,8 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script
            </span>
     </div>
     <div class="content1__img__wrp">
-        <div class="content1__img"></div>
+        <!--<div class="content1__img"></div>-->
+        <img class="img__comp" src="img/comp.png" alt="">
     </div>
 </div>      
        
@@ -77,7 +84,7 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script
     <div class="content2">
         <div class="content2__block">
             <div class="content2__logo__wrap">
-                <a href="#" class="content2__logo__link"></a>
+                <a href="#" class="content2__logo__link"> <img src="img/logo3.png" alt=""></a>
             </div>
             <div class="content2__button__wrap">
                 <button class="buy">Buy Now</button>
