add Radacode create

--- a/Radacode2/index.html
+++ b/Radacode2/index.html
@@ -34,10 +34,10 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script
         </div>
     </nav>
     <div class="banner">
-        <div class="banner__logo-wrap clear">
+        <div class="banner__logo-wrap">
             <a href="#" class="banner__logo-link"><img src="img/logo2.png" alt=""></a>
         </div>
-        <div class="cat clear">
+        <div class="cat">
             <div class="cat1 ct"><img src="img/ct1.png"
              alt=""></div>
             <div class="cat2 ct"><img src="img/ct2.png"
