add Cult1 create

--- a/Cult1/index2.html
+++ b/Cult1/index2.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
   <title>Cult</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <link href="http://allfont.ru/allfont.css?fonts=academia-roman" rel="stylesheet" type="text/css" />
    <link href="http://allfont.ru/allfont.css?fonts=roboto-light" rel="stylesheet" type="text/css" />
    <link href="http://allfont.ru/allfont.css?fonts=roboto-medium" rel="stylesheet" type="text/css" />
@@ -545,7 +546,7 @@
                 <li class="list__item"><a href="#contacts" class="list__item__link">Контакты</a></li>
                 
             </ul>
-            <button class="btn__online"><a class="link__online" href="#online__add">ONLINE запись</a></button>
+            <button class="btn__online"><a class="link__online" href="#online__add">ONLINE <span class="footer-btn__text">запись</span></a></button>
             </div>
             <div class="footer__contacts col-md-3 col-sm-4 col-xs-4">
                <span class="footer__contacts__h3">Контакты</span>
