--- a/Cult1/index2.html
+++ b/Cult1/index2.html
@@ -477,8 +477,8 @@
     <div class="container">
         <h2 id="online__add">Запишитесь онлайн</h2>
         <div class="row clearfix">
-            <form method="post" action="" id="ajaxform">
-                <div class="modal__window_wrap col-md-6">
+            <!--<form >-->
+                <div class="modal__window_wrap col-md-6 col-sm-8 col-xs-11">
                     <h2 class="modal__window__h2">Заявка ONLINE</h2>
                     <span class="modal__window_txt modal__window__text">Ваши данные:</span>
                     <span class="modal__window_txt modal__window__name">Имя:<span class="modal__name-form"></span> </span>
@@ -487,8 +487,8 @@
                     <span class="modal__window_txt modal__window__time">Время:<span class="modal__time-form"></span></span>
                     <span class="modal__window_txt modal__window__comment">Комментарий:<span class="modal__comment-form"></span></span>
                     <span class="modal__window__footer">Наши администраторы свяжутся с Вами в ближайщее время.</span>
-                    <button class="btn__ago">Назад</button>
-                    <button type="submit" class="btn__post">Отправить</button>
+                    <!--<button class="btn__ago">Назад</button>-->
+                    <button class="btn__post">Закрыть</button>
                 </div>
              <div class="col-md-6 col-sm-6">
               <div class="online__time">
@@ -516,7 +516,7 @@
                <span class="t1">Сообщение</span><textarea class="online__txtarea" name="online__text" id="" maxlength="500"></textarea><br>
                <button class="btn__form">Отправить</button>
             </div>
-          </form>
+          <!--</form>-->
         </div>
     </div>
 </section>
