--- a/Cult1/index2.html
+++ b/Cult1/index2.html
@@ -72,13 +72,15 @@
             </div>
        
         <div class="transparent col-xs-12 col-sm-12 col-md-12"></div>
-        <div class="block__actions col-md-12">
+        <div class="container">
+        <div class=" container-fluid block__actions">
                 <div class="block__text__action">
                     <h2 class="action__h2">АКЦИЯ!</h2>
                     <span class="txt__action">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
                 </div>
                 <div id="countdown"></div>	
             </div>
+        </div>
         <div class="flx-slider__wrap col-sm-12">
             <div class="flexslider">
                 <ul class="slides">
