add files imperiya

--- a/Cult1/index2.html
+++ b/Cult1/index2.html
@@ -521,7 +521,7 @@
             <div class="contacts__block col-lg-4 col-md-4 col-sm-4 col-xs-12">
                 <ul>
                     <li class="icon-location"><span class="contacts__text"> г.Новосибирск, ул.Вокзальная магистраль,1</span></li>
-                    <li class="icon-phone"><span class="contacts__text"> 286-26-50</span></li>
+                    <li class="icon-phone"><span class="contacts__text">8(838)286-26-50</span></li>
                     <li class="icon-tablet"><span class="contacts__text">8(913)007-26-50</span></li>
                     <li class="icon-at"><span class="contacts__text">email@mail.ru</span></li>
                 </ul>
@@ -550,7 +550,7 @@
                <span class="footer__contacts__h3">Контакты</span>
                 <ul>
                     <li class="icon-location"><span class="contacts__text"> г.Новосибирск, ул.Вокзальная магистраль,1</span></li>
-                    <li class="icon-phone"><span class="contacts__text"> 286-26-50</span></li>
+                    <li class="icon-phone"><span class="contacts__text">8(838)286-26-50</span></li>
                     <li class="icon-tablet"><span class="contacts__text">8(913)007-26-50</span></li>
                     <li class="icon-at"><span class="contacts__text">email@mail.ru</span></li>
                 </ul>
