--- a/imperiya/index.html
+++ b/imperiya/index.html
@@ -266,7 +266,7 @@
    <div class="container">
     <div class="h2__rect"></div>
      <span class="h2">Отзывы</span>
-     <span class="h3">и что говорят о нас</span>
+     <span class="h3">и что же говорят о нас</span>
       <div class="row clearfix">
           <div class="reviews__block col-md-4 clearfix">
               <img src="img/reviews1.png" alt="photo" class="reviews__photo">
@@ -310,10 +310,10 @@
        <div class="block__client col-md-3">
            <img src="img/client2.png" alt="clints logo" class="clients__logo">
        </div>
-       <div class="block__client col-md-3">
+       <div class="block__client col-md-2">
            <img src="img/client3.png" alt="clints logo" class="clients__logo">
        </div>
-       <div class="block__client col-md-2">
+       <div class="block__client col-md-3">
            <img src="img/client4.png" alt="clints logo" class="clients__logo">
        </div>
        <div class="block__client col-md-2">
@@ -389,7 +389,7 @@
              <span id="text_more" class="seo__txt2">
                  <b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</b> Ratione aliquid modi neque doloremque incidunt possimus fugit ducimus non, nulla, delectus sit quo quae debitis accusamus, nostrum in omnis esse reprehenderit quas quis! Aspernatur debitis ab, obcaecati, quasi ratione nobis blanditiis vel quae laborum beatae quisquam? Quod aliquam facere doloribus voluptatem qui, molestiae ipsum, consequuntur reiciendis veniam dolor non! Vitae, debitis.blanditiis vel quae laborum beatae quisquam? Quod aliquam facere doloribus voluptatem qui.
              </span>
-             <button id="button_d">V</button>
+             <button id="button_d"></button>
          </div>
          
          
