--- a/imperiya/index.html
+++ b/imperiya/index.html
@@ -389,6 +389,7 @@
              <span id="text_more" class="seo__txt2">
                  <b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</b> Ratione aliquid modi neque doloremque incidunt possimus fugit ducimus non, nulla, delectus sit quo quae debitis accusamus, nostrum in omnis esse reprehenderit quas quis! Aspernatur debitis ab, obcaecati, quasi ratione nobis blanditiis vel quae laborum beatae quisquam? Quod aliquam facere doloribus voluptatem qui, molestiae ipsum, consequuntur reiciendis veniam dolor non! Vitae, debitis.blanditiis vel quae laborum beatae quisquam? Quod aliquam facere doloribus voluptatem qui.
              </span>
+             <div class="line"></div>
              <button id="button_d"></button>
          </div>
          
