--- a/imperiya/index.html
+++ b/imperiya/index.html
@@ -21,7 +21,7 @@
   
   
    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-   <script src="https://use.fontawesome.com/1f00ad58ca.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> 
    <script src="js/jquery.flexslider-min.js"></script>
    <script src="js/script.js"></script>
    
@@ -45,8 +45,8 @@
            <div class="logo__wrap col-xs-4 col-sm-3 col-md-3">
                 <img src="img/logo.png" alt="logo" class="logo">
             </div>
-            <button class="navbar-toggle collapsed menu-btn" data-toggle="collapse" data-target="#top-menu">
-                            <span class="icon-menu-2" ></span>
+            <button class="navbar-toggle  menu-btn" data-toggle="collapse" data-target="#top-menu">
+                            <span class="glyphicon glyphicon-align-justify icon-menu-2" ></span>
             </button>
             <div class="menu__contacts col-md-9 col-sm-9 ">
             <div class="social">
