create mobil menu button

--- a/imperiya/index.html
+++ b/imperiya/index.html
@@ -46,7 +46,7 @@
                 <img src="img/logo.png" alt="logo" class="logo">
             </div>
             <button class="navbar-toggle  menu-btn" data-toggle="collapse" data-target="#top-menu">
-                            <span class="glyphicon glyphicon-align-justify icon-menu-2" ></span>
+                            <span class="icon-menu-2" ></span>
             </button>
             <div class="menu__contacts col-md-9 col-sm-9 ">
             <div class="social">
