add create cult

--- a/Cult_mnogostr/price.html
+++ b/Cult_mnogostr/price.html
@@ -391,6 +391,7 @@ $('html, body').animate({scrollTop : 0});
     <div class="container">
         <div class="row clearfix">
             <div class="footer__menu col-md-6 col-sm-8 col-xs-12">
+                <span class="footer__contacts__h3">Меню</span>
                 <ul>
                 <li class="list__item"><a href="index.html" class="list__item__link">Главная</a></li>
                 <li class="list__item"><a href="services.html" class="list__item__link">Услуги</a></li>
