--- a/AirBox/index.html
+++ b/AirBox/index.html
@@ -2,6 +2,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	 <link rel="stylesheet" href="style/normalize.css">
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700,800&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400">
 	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
